[package]
name = "exocortex"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- CORE ASYNC & ERROR HANDLING ---
tokio = { version = "1.37", features = ["full"] }
eyre = "0.6"
tracing = "0.1"
futures = "0.3"

# --- RETH NODE COMPONENTS (v1.1.0) ---
# We lock all components to "v1.1.0" to ensure stability.
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }

# --- PHASE 2: SIMULATION ENGINE (NEW) ---
# The Bridge: Connects Reth DB to Revm
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }

# The Sandbox: Runs the EVM code
# We use v14.0 to match the version compatible with Reth v1.1.0
revm = { version = "14.0", features = ["std", "optional_balance_check", "optional_block_gas_limit", "optional_eip3607"] }
revm-primitives = { version = "9.0", features = ["std"] }

# --- DECODING ---
alloy-sol-types = "0.7"
alloy-primitives = "0.7"

[[bin]]
name = "exocortex"
path = "src/main.rs"